--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,19 +12,22 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
 
+    env:
+      NODE_OPTIONS: '--max_old_space_size=4096'
+
     steps:
     - name: Checkout code
-      uses: actions/checkout@v4  # Update to v4
+      uses: actions/checkout@v4
 
-    - name: Set up Node.js for GitHub Actions
-      uses: actions/setup-node@v4  # Ensure using Node.js 20
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
       with:
         node-version: '20'
 
     - name: Set up Python
-      uses: actions/setup-python@v4  # Update to v4
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.11  # Use Python 3.11
+        python-version: 3.11
 
     - name: Install dependencies
       run: |
@@ -36,7 +39,7 @@ jobs:
         pyinstaller --name OpenAI_TTS_GUI --onefile --windowed --icon=logo.ico main.py
 
     - name: Archive build artifacts
-      uses: actions/upload-artifact@v4  # Update to v4
+      uses: actions/upload-artifact@v4
       with:
         name: OpenAI_TTS_GUI-${{ matrix.os }}
         path: dist/OpenAI_TTS_GUI*
